docs/api/qiskit/0.19/qiskit.circuit.library.TdgGate.mdx
---
title: TdgGate (v0.19)
description: API reference for qiskit.circuit.library.TdgGate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.TdgGate
---

# TdgGate

<Class id="qiskit.circuit.library.TdgGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/library/standard_gates/t.py" signature="TdgGate(label=None)" modifiers="class">
  Single qubit T-adjoint gate (\~Z\*\*0.25).

  It induces a $-\pi/4$ phase.

  This is a non-Clifford gate and a fourth-root of Pauli-Z.

  **Matrix Representation:**

$$
\begin{split}Tdg = \begin{pmatrix}
1 & 0 \\
0 & 1-i
\end{pmatrix}\end{split}
$$

  **Circuit symbol:**

  ```python
       ┌─────┐
  q_0: ┤ Tdg ├
       └─────┘
  ```

  Equivalent to a $\pi/2$ radian rotation about the Z axis.

  Create new Tdg gate.

  ## Attributes

  <span id="tdggate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.TdgGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="tdggate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.TdgGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="tdggate-label" />

  ### label

  <Attribute id="qiskit.circuit.library.TdgGate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="tdggate-params" />

  ### params

  <Attribute id="qiskit.circuit.library.TdgGate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="tdggate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.TdgGate.add_decomposition" signature="TdgGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="tdggate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.TdgGate.assemble" signature="TdgGate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="tdggate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.TdgGate.broadcast_arguments" signature="TdgGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="tdggate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.TdgGate.c_if" signature="TdgGate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="tdggate-control" />

  ### control

  <Function id="qiskit.circuit.library.TdgGate.control" signature="TdgGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return controlled version of gate. See [`ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate") for usage.

    **Parameters**

    *   **num\_ctrl\_qubits** (`Optional`\[`int`]) – number of controls to add to gate (default=1)
    *   **label** (`Optional`\[`str`]) – optional gate label
    *   **ctrl\_state** (`Union`\[`int`, `str`, `None`]) – The control state in decimal or as a bitstring (e.g. ‘111’). If None, use 2\*\*num\_ctrl\_qubits-1.

    **Returns**

    Controlled version of gate. This default algorithm uses num\_ctrl\_qubits-1 ancillae qubits so returns a gate of size num\_qubits + 2\*num\_ctrl\_qubits - 1.

    **Return type**

    [qiskit.circuit.ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")

    **Raises**

    **QiskitError** – unrecognized mode or invalid ctrl\_state
  </Function>

  <span id="tdggate-copy" />

  ### copy

  <Function id="qiskit.circuit.library.TdgGate.copy" signature="TdgGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="tdggate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.TdgGate.inverse" signature="TdgGate.inverse()">
    Return inverse Tdg gate (i.e. T).
  </Function>

  <span id="tdggate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.TdgGate.is_parameterized" signature="TdgGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="tdggate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.TdgGate.mirror" signature="TdgGate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="tdggate-power" />

  ### power

  <Function id="qiskit.circuit.library.TdgGate.power" signature="TdgGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="tdggate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.TdgGate.qasm" signature="TdgGate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="tdggate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.TdgGate.repeat" signature="TdgGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="tdggate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.library.TdgGate.to_matrix" signature="TdgGate.to_matrix()">
    Return a numpy.array for the inverse T gate.
  </Function>
</Class>

