docs/api/qiskit/0.24/qiskit.circuit.library.TdgGate.mdx
---
title: TdgGate
description: API reference for qiskit.circuit.library.TdgGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.TdgGate
---

<span id="qiskit-circuit-library-tdggate" />

# qiskit.circuit.library.TdgGate

<Class id="qiskit.circuit.library.TdgGate" github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/circuit/library/standard_gates/t.py" signature="TdgGate(label=None)">
  Single qubit T-adjoint gate (\~Z\*\*0.25).

  It induces a $-\pi/4$ phase.

  This is a non-Clifford gate and a fourth-root of Pauli-Z.

  **Matrix Representation:**

  $$
  \begin{split}Tdg = \begin{pmatrix}
          1 & 0 \\
          0 & e^{-i\pi/4}
      \end{pmatrix}\end{split}
  $$

  **Circuit symbol:**

  ```python
       ┌─────┐
  q_0: ┤ Tdg ├
       └─────┘
  ```

  Equivalent to a $\pi/2$ radian rotation about the Z axis.

  Create new Tdg gate.

  ### \_\_init\_\_

  <Function id="qiskit.circuit.library.TdgGate.__init__" name="__init__" signature="__init__(label=None)">
    Create new Tdg gate.
  </Function>

  ## Methods

  |                                                                                                                                                 |                                                                          |
  | ----------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.circuit.library.TdgGate.__init__ "qiskit.circuit.library.TdgGate.__init__")(\[label])                                      | Create new Tdg gate.                                                     |
  | [`add_decomposition`](#qiskit.circuit.library.TdgGate.add_decomposition "qiskit.circuit.library.TdgGate.add_decomposition")(decomposition)      | Add a decomposition of the instruction to the SessionEquivalenceLibrary. |
  | [`assemble`](#qiskit.circuit.library.TdgGate.assemble "qiskit.circuit.library.TdgGate.assemble")()                                              | Assemble a QasmQobjInstruction                                           |
  | [`broadcast_arguments`](#qiskit.circuit.library.TdgGate.broadcast_arguments "qiskit.circuit.library.TdgGate.broadcast_arguments")(qargs, cargs) | Validation and handling of the arguments and its relationship.           |
  | [`c_if`](#qiskit.circuit.library.TdgGate.c_if "qiskit.circuit.library.TdgGate.c_if")(classical, val)                                            | Add classical condition on register classical and value val.             |
  | [`control`](#qiskit.circuit.library.TdgGate.control "qiskit.circuit.library.TdgGate.control")(\[num\_ctrl\_qubits, label, ctrl\_state])         | Return controlled version of gate.                                       |
  | [`copy`](#qiskit.circuit.library.TdgGate.copy "qiskit.circuit.library.TdgGate.copy")(\[name])                                                   | Copy of the instruction.                                                 |
  | [`inverse`](#qiskit.circuit.library.TdgGate.inverse "qiskit.circuit.library.TdgGate.inverse")()                                                 | Return inverse Tdg gate (i.e.                                            |
  | [`is_parameterized`](#qiskit.circuit.library.TdgGate.is_parameterized "qiskit.circuit.library.TdgGate.is_parameterized")()                      | Return True .IFF.                                                        |
  | [`mirror`](#qiskit.circuit.library.TdgGate.mirror "qiskit.circuit.library.TdgGate.mirror")()                                                    | DEPRECATED: use instruction.reverse\_ops().                              |
  | [`power`](#qiskit.circuit.library.TdgGate.power "qiskit.circuit.library.TdgGate.power")(exponent)                                               | Creates a unitary gate as gate^exponent.                                 |
  | [`qasm`](#qiskit.circuit.library.TdgGate.qasm "qiskit.circuit.library.TdgGate.qasm")()                                                          | Return a default OpenQASM string for the instruction.                    |
  | [`repeat`](#qiskit.circuit.library.TdgGate.repeat "qiskit.circuit.library.TdgGate.repeat")(n)                                                   | Creates an instruction with gate repeated n amount of times.             |
  | [`reverse_ops`](#qiskit.circuit.library.TdgGate.reverse_ops "qiskit.circuit.library.TdgGate.reverse_ops")()                                     | For a composite instruction, reverse the order of sub-instructions.      |
  | [`to_matrix`](#qiskit.circuit.library.TdgGate.to_matrix "qiskit.circuit.library.TdgGate.to_matrix")()                                           | Return a numpy.array for the inverse T gate.                             |
  | [`validate_parameter`](#qiskit.circuit.library.TdgGate.validate_parameter "qiskit.circuit.library.TdgGate.validate_parameter")(parameter)       | Gate parameters should be int, float, or ParameterExpression             |

  ## Attributes

  |                                                                                                                    |                                                                               |
  | ------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------- |
  | [`decompositions`](#qiskit.circuit.library.TdgGate.decompositions "qiskit.circuit.library.TdgGate.decompositions") | Get the decompositions of the instruction from the SessionEquivalenceLibrary. |
  | [`definition`](#qiskit.circuit.library.TdgGate.definition "qiskit.circuit.library.TdgGate.definition")             | Return definition in terms of other basic gates.                              |
  | [`duration`](#qiskit.circuit.library.TdgGate.duration "qiskit.circuit.library.TdgGate.duration")                   | Get the duration.                                                             |
  | [`label`](#qiskit.circuit.library.TdgGate.label "qiskit.circuit.library.TdgGate.label")                            | Return gate label                                                             |
  | [`params`](#qiskit.circuit.library.TdgGate.params "qiskit.circuit.library.TdgGate.params")                         | return instruction params.                                                    |
  | [`unit`](#qiskit.circuit.library.TdgGate.unit "qiskit.circuit.library.TdgGate.unit")                               | Get the time unit of duration.                                                |

  ### add\_decomposition

  <Function id="qiskit.circuit.library.TdgGate.add_decomposition" name="add_decomposition" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### assemble

  <Function id="qiskit.circuit.library.TdgGate.assemble" name="assemble" signature="assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    `Instruction`
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.TdgGate.broadcast_arguments" name="broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  ### c\_if

  <Function id="qiskit.circuit.library.TdgGate.c_if" name="c_if" signature="c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  ### control

  <Function id="qiskit.circuit.library.TdgGate.control" name="control" signature="control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return controlled version of gate. See [`ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate") for usage.

    **Parameters**

    *   **num\_ctrl\_qubits** (`Optional`\[`int`]) – number of controls to add to gate (default=1)
    *   **label** (`Optional`\[`str`]) – optional gate label
    *   **ctrl\_state** (`Union`\[`int`, `str`, `None`]) – The control state in decimal or as a bitstring (e.g. ‘111’). If None, use 2\*\*num\_ctrl\_qubits-1.

    **Returns**

    Controlled version of gate. This default algorithm uses num\_ctrl\_qubits-1 ancillae qubits so returns a gate of size num\_qubits + 2\*num\_ctrl\_qubits - 1.

    **Return type**

    [qiskit.circuit.ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")

    **Raises**

    **QiskitError** – unrecognized mode or invalid ctrl\_state
  </Function>

  ### copy

  <Function id="qiskit.circuit.library.TdgGate.copy" name="copy" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### decompositions

  <Function id="qiskit.circuit.library.TdgGate.decompositions" name="decompositions" signature="property decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Function>

  ### definition

  <Function id="qiskit.circuit.library.TdgGate.definition" name="definition" signature="property definition">
    Return definition in terms of other basic gates.
  </Function>

  ### duration

  <Function id="qiskit.circuit.library.TdgGate.duration" name="duration" signature="property duration">
    Get the duration.
  </Function>

  ### inverse

  <Function id="qiskit.circuit.library.TdgGate.inverse" name="inverse" signature="inverse()">
    Return inverse Tdg gate (i.e. T).
  </Function>

  ### is\_parameterized

  <Function id="qiskit.circuit.library.TdgGate.is_parameterized" name="is_parameterized" signature="is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  ### label

  <Function id="qiskit.circuit.library.TdgGate.label" name="label" signature="property label">
    Return gate label

    **Return type**

    `str`
  </Function>

  ### mirror

  <Function id="qiskit.circuit.library.TdgGate.mirror" name="mirror" signature="mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### params

  <Function id="qiskit.circuit.library.TdgGate.params" name="params" signature="property params">
    return instruction params.
  </Function>

  ### power

  <Function id="qiskit.circuit.library.TdgGate.power" name="power" signature="power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  ### qasm

  <Function id="qiskit.circuit.library.TdgGate.qasm" name="qasm" signature="qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  ### repeat

  <Function id="qiskit.circuit.library.TdgGate.repeat" name="repeat" signature="repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.circuit.library.TdgGate.reverse_ops" name="reverse_ops" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### to\_matrix

  <Function id="qiskit.circuit.library.TdgGate.to_matrix" name="to_matrix" signature="to_matrix()">
    Return a numpy.array for the inverse T gate.
  </Function>

  ### unit

  <Function id="qiskit.circuit.library.TdgGate.unit" name="unit" signature="property unit">
    Get the time unit of duration.
  </Function>

  ### validate\_parameter

  <Function id="qiskit.circuit.library.TdgGate.validate_parameter" name="validate_parameter" signature="validate_parameter(parameter)">
    Gate parameters should be int, float, or ParameterExpression
  </Function>
</Class>

